--- a/src/views/recs.css
+++ b/src/views/recs.css
@@ -134,8 +134,24 @@
         margin-left: 0rem;
         margin-bottom: 1rem;
         font-size: 1.75rem;
+        text-align: center;
     }
     .recs .num{
         font-size: 1.75rem;
     }
+   .rec-btn{
+    margin: 1rem;
+   }
+
+   .get-recs-btn{
+    margin-top: 0;
+   }
+
+   .textfield-container{
+    padding: 0;
+   }
+   h1.rec-text{
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+   }
    }
